{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 9,
  "lineage": "b7ca6ab5-f5d1-ec5c-09f5-b84543220c35",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382366182:vpc/vpc-0ff5ed0cead328dbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-027eda021a0d19bce",
            "default_route_table_id": "rtb-0067225e48d569216",
            "default_security_group_id": "sg-09506217b61b6d4d8",
            "dhcp_options_id": "dopt-0061b5332a49d6fdb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0ff5ed0cead328dbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0067225e48d569216",
            "owner_id": "992382366182",
            "region": "us-east-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fe18bc3cfa53a248",
            "arn": "arn:aws:ec2:us-east-2:992382366182:instance/i-038b17948565f22e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038b17948565f22e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-021990a9db3aec960"
              }
            ],
            "primary_network_interface_id": "eni-021990a9db3aec960",
            "private_dns": "ip-172-31-39-160.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.160",
            "public_dns": "ec2-18-222-139-244.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.139.244",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a253efad9d353c71",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terra-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b7b7cf0ff4ac4ad",
            "tags": {
              "Name": "terra-automate-server"
            },
            "tags_all": {
              "Name": "terra-automate-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0716a2fd6c099fa7d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382366182",
            "id": "i-038b17948565f22e3",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fe18bc3cfa53a248",
            "arn": "arn:aws:ec2:us-east-2:992382366182:instance/i-067187f8a2fbc2387",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067187f8a2fbc2387",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a377bc8ca639ca76"
              }
            ],
            "primary_network_interface_id": "eni-0a377bc8ca639ca76",
            "private_dns": "ip-172-31-43-80.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.80",
            "public_dns": "ec2-18-224-93-241.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.93.241",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-013bacf78be527623",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terra-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b7b7cf0ff4ac4ad",
            "tags": {
              "Name": "terra-automate-server"
            },
            "tags_all": {
              "Name": "terra-automate-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0716a2fd6c099fa7d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382366182",
            "id": "i-067187f8a2fbc2387",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.my_key_pair",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382366182:security-group/sg-0716a2fd6c099fa7d",
            "description": "this is Inbound and outbound rules for your instance Security group",
            "egress": [],
            "id": "sg-0716a2fd6c099fa7d",
            "ingress": [],
            "name": "terra-security-group",
            "name_prefix": "",
            "owner_id": "992382366182",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff5ed0cead328dbd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382366182",
            "id": "sg-0716a2fd6c099fa7d",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382366182:security-group-rule/sgr-0e2398d24f44e6bb9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e2398d24f44e6bb9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0716a2fd6c099fa7d",
            "security_group_rule_id": "sgr-0e2398d24f44e6bb9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382366182",
            "id": "sgr-0e2398d24f44e6bb9",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382366182:security-group-rule/sgr-0fc1e4e184558da80",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0fc1e4e184558da80",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0716a2fd6c099fa7d",
            "security_group_rule_id": "sgr-0fc1e4e184558da80",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382366182",
            "id": "sgr-0fc1e4e184558da80",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:992382366182:security-group-rule/sgr-03e48b3940d441b68",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03e48b3940d441b68",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0716a2fd6c099fa7d",
            "security_group_rule_id": "sgr-03e48b3940d441b68",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "992382366182",
            "id": "sgr-03e48b3940d441b68",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.my_security_group"
          ]
        }
      ]
    }
  ]
}